ADC interrupt each 10 seconds.
The main idea of the interrupt has been taken from the library NRF52_MBED_TimerInterrupt, from khoih-prog, in particular
from https://github.com/khoih-prog/NRF52_MBED_TimerInterrupt/tree/main/examples/TimerInterruptLEDDemo

The problem with this library is that ISR timer do not support complex problems in handler or will be hang (really proven)
so I decided to make a trigger in the handler and the read and write task in the loop.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = nordicnrf52
 board = nano33ble
 framework = arduino
+upload_port = COM6
+build_flags = 
+    -DNRF52_LFCLK_RC
+lib_deps = 
+	khoih-prog/NRF52_MBED_TimerInterrupt@^1.4.1
